# aftertaxi-vnext

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  aftertaxi-refactor.patch  bugfix-batch.patch  pyproject.toml  requirements.txt  start.bat  start.sh  start_aftertaxi.py
.streamlit/: config.toml
docs/: FILE_GUIDE.md  add_strategy.md  api.md  architecture_agent.py  core_boundary_guide.md  design_1to5.py  expansion_guardrails.md  lane_d_design.md  oracle_shadow_classification.md  primary_promotion_checklist.md  quickstart.md  strategy_builder_design.md  tax_scope.md  test_map.md
examples/: 01_spy_basic.json  02_q60s40_isa.json  03_progressive_tax.json  04_band_rebalance.json  05_full_setup.json  README.md
src/aftertaxi/advisor/: advisor_v2.py  builder.py  rules.py  types.py
src/aftertaxi/analysis/: analytics.py  compare.py  (+8 more)
tests/: helpers.py  test_allocation.py  test_alphavantage_fred.py  test_analytics.py  test_apply_patch.py  test_attribution.py  test_band_rebalance.py  test_bug_report.py  test_bugfix_review.py  test_characterization.py  test_cli.py  test_compare.py  test_compile.py  test_compile_merge.py  test_compile_strict.py  test_contracts.py  test_cross_feature.py  test_data_cache.py  test_data_provider.py  test_deposit_ownership.py  test_dividend.py  test_engine_steps.py  test_eodhd_loader.py  test_export.py  test_golden_baseline.py  test_gui_infra.py  test_health_insurance.py  test_hmm_diagnostics.py  test_hmm_regime.py  test_intent_advisor.py  test_interpret_and_savings.py  test_isa_optimizer.py  test_lane_a.py  test_lane_a_compare.py  test_lane_a_dual_path.py  test_lane_a_loader.py  test_lane_b.py  test_lane_c.py  test_lane_c_polish.py  test_lane_c_smoke.py  (+26 more)
(+72 files in other folders)
