[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aftertaxi-vnext"
version = "1.0.0"
description = "한국 세법 기반 세후 DCA 레버리지 ETF 백테스트 플랫폼"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
data = [
    "yfinance>=0.2",
    "requests>=2.28",
    "hmmlearn>=0.3",
]
parallel = [
    "joblib>=1.3",
]
gui = [
    "streamlit>=1.30",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
all = [
    "aftertaxi-vnext[data,parallel,gui,dev]",
]

[project.scripts]
aftertaxi = "aftertaxi.apps.cli:entry_point"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
